Fixed the footer overlap issue

--- a/main.css
+++ b/main.css
@@ -1,19 +1,19 @@
 body{
-	width: 100%;
-	height: 100%;
-	overflow-x: hidden;
-	z-index: 0;
-	position: relative;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    z-index: 0;
+    position: relative;
 }
 header{
-	margin: 0px;
-	padding: 0px;
-	background: #eee;
-	position: fixed;
-	height: 75px;
-	width: 100%;
-	z-index: 1;
-	margin-bottom: 80px;
+    margin: 0px;
+    padding: 0px;
+    background: #eee;
+    position: fixed;
+    height: 75px;
+    width: 100%;
+    z-index: 1;
+    margin-bottom: 80px;
 }
 header.sticky{
     width: 100%;
@@ -25,40 +25,40 @@ header.sticky{
     height: 75px;
 }
 li{
-	display: inline-block;
+    display: inline-block;
 }
-
+ 
 .left-nav{
-	float: left;
-	margin-left: 0px;
-	font-family: 'Roboto';
-	font-weight: 500;
-	font-style: normal;
-	font-size: 24px;
-	margin-left: 10px;
-	color: #3847A0;
+    float: left;
+    margin-left: 0px;
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-style: normal;
+    font-size: 24px;
+    margin-left: 10px;
+    color: #3847A0;
 }
 .install{
-	background-color: #4CAF50;
-	border-radius: 3px;
-	color: white;
-	font-weight: 500;
-	border: none;
-	font-size: 16px;
-	width: 100px;
-	height: 30px;
+    background-color: #4CAF50;
+    border-radius: 3px;
+    color: white;
+    font-weight: 500;
+    border: none;
+    font-size: 16px;
+    width: 100px;
+    height: 30px;
 }
 .col-sm-6{
-	text-align: center;
+    text-align: center;
 }
 .carousel-inner > .item > h3,
   .carousel-inner > .item > a > h3 {
-  	  height: 250px; 
+      height: 250px;
       width: 100%;
       margin: auto;
       background: linear-gradient(
-	      rgba(0, 0, 0, 0.7), 
-	      rgba(0, 0, 0, 0.7)
+          rgba(0, 0, 0, 0.7),
+          rgba(0, 0, 0, 0.7)
     ),
     url(images/carousel-placeholder3.png);
 }
@@ -66,127 +66,131 @@ li{
       display: none;
 }
 .item h3{
-	padding: 80px;
-	margin: 50px;
-	text-align: center;
- 	color: #fff;
- 	font-family: 'Roboto';
+    padding: 56px;
+    margin: 50px;
+    text-align: center;
+    color: #fff;
+    font-family: 'Roboto';
+    font-weight: 500;
+    font-style: italic;
  }
 p{
-	float: right;
-	margin-right: 60px;
-	margin-top: 20px;
+    float: right;
+    margin-right: 60px;
+    margin-top: 20px;
 }
 @font-face {
     font-family: 'Roboto';
     src: url("fonts/Roboto-BoldItalic_2.ttf") /* TTF file for CSS3 browsers */
 }
 .row1{
-	height:30%;
-	width: 100%;
-	display: block;
+    height:30%;
+    width: 100%;
+    display: block;
+    font-family: 'Roboto';
+    font-weight: 500;
+    vertical-align: center;
 }
 .col-md-6{
-	text-align: center;
+    text-align: center;
 }
 .text{
-	margin: 10px;
-	padding: 80px;
+    margin: 10px;
+    padding: 80px;
 }
 .text h3 {
-	color: #3F51B5;
+    color: #3F51B5;
 }
 .text h4 {
-	color: #666;
+    color: #666;
 }
 footer{
-	width: 100%;
-	height: 80%;
-	margin-top: 20px;
+    width: 100%;
+    height: 80%;
+    margin-top: 20px;
 }
 footer h4 {
-	color: #666;
+    color: #666;
 }
 .footer-title h4{
-	color: rgba(0,0,0,0.4);
-	font-family: 'Roboto';
-	font-size: 22px;
-	font-weight: 400;
-	line-height: 150%;
-	margin-bottom: 60px;
+    color: rgba(0,0,0,0.4);
+    font-family: 'Roboto';
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 150%;
+    margin-bottom: 60px;
 }
 .sponsers{
-	width: 80%;
-	margin: auto;
-	margin-bottom: 100px;
+    width: 80%;
+    margin: auto;
+    margin-bottom: 100px;
 }
 .sponser1{
-	height: 150px;
-	width: 300px;
-	text-align: center;
-	background-image: url(images/1-bw.png);
+    height: 150px;
+    width: 300px;
+    text-align: center;
+    background-image: url(images/1-bw.png);
 }
 .sponser1:hover{
-	background-image: url(images/1-rgb.png);
-	transition-property: background-image;
+    background-image: url(images/1-rgb.png);
+    transition-property: background-image;
 }
 .sponser2{
-	height: 150px;
-	width: 300px;
-	background-image: url(images/2-bw.png);
+    height: 150px;
+    width: 300px;
+    background-image: url(images/2-bw.png);
 }
 .sponser2:hover{
-	background-image: url(images/2-rgb.png);
-	transition-property: background-image;
+    background-image: url(images/2-rgb.png);
+    transition-property: background-image;
 }
 .sponser3{
-	height: 150px;
-	width: 300px;
-	background-image: url(images/6-bw.png);
+    height: 150px;
+    width: 300px;
+    background-image: url(images/6-bw.png);
 }
 .sponser3:hover{
-	background-image: url(images/6-rgb.png);
-	transition-property: background-image;
+    background-image: url(images/6-rgb.png);
+    transition-property: background-image;
 }
 .sponser4{
-	height: 150px;
-	width: 300px;
-	background-image: url(images/5-bw.png);
+    height: 150px;
+    width: 300px;
+    background-image: url(images/5-bw.png);
 }
 .sponser4:hover{
-	background-image: url(images/5-rgb.png);
-	transition-property: background-image;
-}
-.btn-grp {
-	text-align: center;
-	margin-bottom: 30px;
-}
-.bottom{
-	margin: 10px;
-	margin-top: 30px;
-	height: 32px;
-	width: 150px;
-	border-radius: 4px;
-	background-color: #ebebeb;
-	border-color: #bbb;
-	border: none;
-	font-weight: 500;
-	font-size: 16px;
-	color: #444;
-}
-a{
-	color: #666 ;
-}
-a:hover{
-	color: #666;
-	text-decoration: none;
-}
-button{
-	width: 120px;
-	margin: 20px;
+    background-image: url(images/5-rgb.png);
+    transition-property: background-image;
 }
 .btn-grp {
     text-align: center;
     margin-bottom: 30px;
 }
-
+.bottom{
+    margin: 10px;
+    margin-top: 30px;
+    height: 32px;
+    width: 150px;
+    border-radius: 4px;
+    background-color: #ebebeb;
+    border-color: #bbb;
+    border: none;
+    font-weight: 500;
+    font-size: 16px;
+    color: #444;
+}
+a{
+    color: #666 ;
+}
+a:hover{
+    color: #666;
+    text-decoration: none;
+}
+button{
+    width: 120px;
+    margin: 20px;
+}
+.btn-grp {
+    text-align: center;
+    margin-bottom: 30px;
+}
